syntax = "proto3";
import "google/api/annotations.proto";

package pb;

//The Driver service definition.
service Driver {
 rpc GetDriverInfo (GetDriverInfoRequest) returns (GetDriverInfoReply) {
  option (google.api.http) = {
   get: "/driver/get-driver-info"
  };
 };
 rpc TakeOrder     (TakeOrderRequest    ) returns (TakeOrderReply    ) {
  option (google.api.http) = {
   post: "/driver/take-order"
   body: "*"
  };
 };
}

message GetDriverInfoRequest {
 string username = 1;
 string password = 2;
}

message GetDriverInfoReply {
 int64  user_id     = 1;
 string name        = 2;
 int32  age         = 3;
 int64  account_num = 4;
 float  asset       = 5;
}

message TakeOrderRequest {
 int64  driver_id   = 1;
 string driver_name = 2;
 string location    = 3;
 string car         = 4;
}

message TakeOrderReply {
 bool status = 1;
 string msg = 2;
}

